import { ComponentFixture, TestBed } from '@angular/core/testing';

import { By } from '@angular/platform-browser';
import { provideRouter } from '@angular/router';
import { QuestionTextWithInfoComponent } from './question-text-with-info.component';
import {
  FeedbackMcqQuestionDetails,
  FeedbackQuestionType,
  FeedbackTextQuestionDetails,
  QuestionRecipientType,
} from '../../../types/api-output';

describe('QuestionTextWithInfoComponent', () => {
  let component: QuestionTextWithInfoComponent;
  let fixture: ComponentFixture<QuestionTextWithInfoComponent>;

  beforeEach(async () => {
    await TestBed.configureTestingModule({
      providers: [provideRouter([])],
    }).compileComponents();
  });

  beforeEach(() => {
    fixture = TestBed.createComponent(QuestionTextWithInfoComponent);
    component = fixture.componentInstance;
    fixture.detectChanges();
  });

  const textQuestionDetails: FeedbackTextQuestionDetails = {
    shouldAllowRichText: true,
    questionType: FeedbackQuestionType.TEXT,
    questionText: 'Text question details',
    recommendedLength: 100,
  };

  const mcqQuestionDetails: FeedbackMcqQuestionDetails = {
    questionType: FeedbackQuestionType.MCQ,
    questionText: 'MCQ question details',
    hasAssignedWeights: false,
    mcqWeights: [],
    mcqOtherWeight: 0,
    mcqChoices: ['a', 'b'],
    otherEnabled: false,
    questionDropdownEnabled: false,
    generateOptionsFor: QuestionRecipientType.NONE,
  };

  it('should create', () => {
    expect(component).toBeTruthy();
  });

  it('should not show control link and question details for TEXT questions', () => {
    component.questionDetails = textQuestionDetails;
    fixture.detectChanges();

    const questionDetailControlLink: any = fixture.debugElement.query(By.css('a'));
    const infoWrapper: any = fixture.debugElement.query(By.css('div'));

    expect(questionDetailControlLink).toBeNull();
    expect(infoWrapper).toBeNull();
    expect(fixture).toMatchSnapshot();
  });

  it('should show control link when question type is not TEXT', () => {
    component.questionDetails = mcqQuestionDetails;
    fixture.detectChanges();

    expect(fixture).toMatchSnapshot();
  });

  it('should show question detail when click control link', () => {
    component.questionDetails = mcqQuestionDetails;
    fixture.detectChanges();

    const questionDetailControlLink: any = fixture.debugElement.query(By.css('button'));

    questionDetailControlLink.nativeElement.click();
    fixture.detectChanges();

    expect(fixture).toMatchSnapshot();
  });
});
