// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuestionTextWithInfoComponent > should not show control link and question details for TEXT questions 1`] = `
<tm-question-text-with-info
  QuestionDetailsTypeChecker="undefined"
  additionalInfoIsExpanded="false"
  downloadQuestionResultEvent={[Function EventEmitter_]}
  questionDetails={[Function Object]}
  questionNumber="0"
>
  <span
    class="d-flex flex-column flex-sm-row align-items-sm-center"
  >
    <h2
      class="question-number"
    >
      Question 0:
    </h2>
    <span
      class="question-text mx-sm-2"
    >
      Text question details
    </span>
  </span>
</tm-question-text-with-info>
`;

exports[`QuestionTextWithInfoComponent > should show control link when question type is not TEXT 1`] = `
<tm-question-text-with-info
  QuestionDetailsTypeChecker="undefined"
  additionalInfoIsExpanded="false"
  downloadQuestionResultEvent={[Function EventEmitter_]}
  questionDetails={[Function Object]}
  questionNumber="0"
>
  <span
    class="d-flex flex-column flex-sm-row align-items-sm-center"
  >
    <h2
      class="question-number"
    >
      Question 0:
    </h2>
    <span
      class="question-text mx-sm-2"
    >
      MCQ question details
    </span>
    <button
      class="additional-info-button info-font-size me-auto border-0 p-0 bg-transparent text-primary"
    >
       [more] 
    </button>
  </span>
</tm-question-text-with-info>
`;
